[tool.poetry]
name = "ps_watch"
version = "0.1.0"
description = "Monitor and get alert on Playstation store item updates"
authors = ["Or Carmi <or.carmi82@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
pony = "^0.7.13"
rich = "^2.0.0"
glom = "^20.5.0"
httpx = "^0.13.3"
typer = "^0.2.1"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pre-commit = "^2.4.0"
